force-app/main/default/objects/Reload_Staging__c/Reload_Staging__c.object-meta.xml
<CustomObject>
    <description>Stores individual staged records that will eventually be loaded into the target object.</description>
    <label>Reload Staging Record</label>
    <pluralLabel>Reload Staging Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>RS-{000000}</displayFormat>
        <label>Staging Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>