force-app/main/default/objects/Reload_Staging__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <description>Parent batch that groups this staged record.</description>
    <label>Batch</label>
    <referenceTo>Reload_Batch__c</referenceTo>
    <relationshipLabel>Staging Records</relationshipLabel>
    <relationshipName>Staging_Records</relationshipName>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>