force-app/main/default/objects/Reload_Staging__c/fields/Created_From__c.field-meta.xml
<CustomField>
    <fullName>Created_From__c</fullName>
    <description
  >Friendly description of the process or file that produced the staged row.</description>
    <label>Created From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>