force-app/main/default/objects/Reload_Staging__c/fields/External_Id_Field__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Field__c</fullName>
    <description>API name of the field used as an external identifier during upsert operations.</description>
    <label>External ID Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>