force-app/main/default/objects/Reload_Staging__c/fields/Field_Count__c.field-meta.xml
<CustomField>
    <fullName>Field_Count__c</fullName>
    <description>Number of field value pairs captured for this staged record.</description>
    <label>Field Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>