force-app/main/default/objects/Reload_Staging__c/fields/Origin_Type__c.field-meta.xml
<CustomField>
    <fullName>Origin_Type__c</fullName>
    <description>Specific mechanism that inserted this staged row.</description>
    <label>Origin Type</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>File Upload</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>External API</fullName>
            </value>
            <value>
                <fullName>Manual Entry</fullName>
            </value>
            <value>
                <fullName>Scheduled Fetch</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>