force-app/main/default/objects/Reload_Staging__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description
  >Raw payload captured for the staged row. Typically JSON with field names and values.</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>