force-app/main/default/objects/Reload_Staging__c/fields/Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Record_Action__c</fullName>
    <description>CRUD operation to apply to the target object for this staged row.</description>
    <label>Record Action</label>
    <picklist>
        <picklistValues>
            <fullName>Insert</fullName>
            <default>true</default>
        </picklistValues>
        <picklistValues>
            <fullName>Update</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Upsert</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Delete</fullName>
        </picklistValues>
        <sorted>true</sorted>
    </picklist>
    <type>Picklist</type>
</CustomField>