force-app/main/default/objects/Reload_Staging__c/fields/Record_Hash__c.field-meta.xml
<CustomField>
    <fullName>Record_Hash__c</fullName>
    <description>Hash or checksum to help identify duplicate staged records.</description>
    <label>Record Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>