force-app/main/default/objects/Reload_Staging__c/fields/Source_Reference__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference__c</fullName>
    <description
  >Identifier for the inbound row such as CSV header or external identifier.</description>
    <label>Source Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>