force-app/main/default/objects/Reload_Staging__c/fields/Source_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Row_Number__c</fullName>
    <description>Original row number or sequence from the inbound source.</description>
    <label>Source Row Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>