force-app/main/default/objects/Reload_Staging__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Processing status for the staged record.</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
            </value>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
            <sorted>true</sorted>
        </valueSetDefinition>
    </valueSet>
    <type>Picklist</type>
</CustomField>