force-app/main/default/objects/Reload_Staging__c/fields/Target_Object_API__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API__c</fullName>
    <description
  >API name of the object that this staged record targets.</description>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>