force-app/main/default/objects/Reload_Staging__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Batch__c</columns>
    <columns>Status__c</columns>
    <columns>Record_Action__c</columns>
    <columns>Source_Row_Number__c</columns>
    <columns>Field_Count__c</columns>
    <columns>Origin_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Staged Records</label>
</ListView>